Fix spacing bug on writers

--- a/src/app/addresses/add-addresses/add-one/add-one.component.scss
+++ b/src/app/addresses/add-addresses/add-one/add-one.component.scss
@@ -17,7 +17,7 @@ form {
   }
 
   .my-mat-form-field {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 
     .mat-form-field-infix {
       line-height: 1.35;
@@ -29,7 +29,7 @@ form {
   margin-top: 20px;
 }
 
-button {
+#address-submit {
   margin-top: 35px;
 }
 
