--- a/src/app/writers/add-writer/add-writer.component.scss
+++ b/src/app/writers/add-writer/add-writer.component.scss
@@ -20,7 +20,7 @@
       margin-bottom: -1.5em !important;
     }
 
-    .my-mat-form-field {
+    .my-mat-form-fields {
       margin-bottom: 20px;
 
       .mat-form-field-infix {
